--- a/root-apps/root-appset.yaml
+++ b/root-apps/root-appset.yaml
@@ -13,13 +13,13 @@ spec:
         app_ns: apache-localchart
   template:
     metadata:
-      name: nginx-local
+      name: '{{ app }}-local'
     spec:
       project: default
       source:
         repoURL: https://github.com/zralt/k8s-argocd.git
         targetRevision: HEAD
-        path: apps/{{ app }}
+        path: 'apps/{{ app }}'
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{ app_ns }}'
