--- a/root-apps/root-appset.yaml
+++ b/root-apps/root-appset.yaml
@@ -23,3 +23,8 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{ app_ns }}'
+      syncPolicy:
+        automated:
+          selfHeal: true
+        syncOptions:
+        - CreateNamespace=true
