--- a/apps/apache/Chart.yaml
+++ b/apps/apache/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: nginx
+name: apache
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
